# confer

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  README.zh-CN.md  netlify.toml  pyproject.toml
config/: venues.yaml
data/: dac2026_metadata.json
data/cache/: home.html
data/cache/presentations/: RESEARCH004__sess155.html  RESEARCH004__sess312.html  RESEARCH012__sess129.html  RESEARCH012__sess317.html  RESEARCH025__sess155.html  RESEARCH025__sess312.html  RESEARCH031__sess133.html  RESEARCH031__sess319.html  RESEARCH032__sess156.html  RESEARCH032__sess312.html  RESEARCH043__sess171.html  RESEARCH043__sess318.html  RESEARCH046__sess112.html  RESEARCH046__sess314.html  RESEARCH052__sess120.html  RESEARCH052__sess313.html  RESEARCH054__sess137.html  RESEARCH054__sess319.html  RESEARCH068__sess175.html  RESEARCH068__sess317.html  RESEARCH073__sess112.html  RESEARCH073__sess314.html  RESEARCH080__sess167.html  RESEARCH080__sess312.html  RESEARCH083__sess114.html  RESEARCH083__sess313.html  RESEARCH094__sess145.html  RESEARCH094__sess314.html  RESEARCH1000__sess147.html  (+1057 more)
docs/: favorites.html  index.html
docs/assets/: styles.css
mcp/: README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: corpus.ts  server.ts
scraper/tests/: test_aaai.py  test_acl_anthology.py  test_dateconf.py  test_dblp.py  test_enrichers.py  test_fetcher.py  test_linklings.py  test_models.py  test_ndss.py  test_openreview.py  test_researchr.py  test_sigarch.py
src/dac26/: __init__.py  scrape.py
web/: astro.config.mjs  package-lock.json  package.json  smoke.mjs
(+79 files in other folders)
