[project]
name = "dac26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SUPER", email = "hi@repus.me" }
]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
]

[project.scripts]
dac26 = "dac26.scrape:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
